# pokemongo

./: .gitignore  ASSETS_STRATEGY.md  CMakeLists.txt  CREATURE_SYSTEM.md  Cargo.toml  GAME_MODES.md  PROGRESS_REPORT.md  PROJECT_STRUCTURE.md  README.md  RELEASE_TEMPLATE.md  build.rs  build_output.txt  current_files.txt  file_checklist.txt
.claude/: settings.local.json
.github/workflows/: release.yml
cpp/math/: simd_operations.cpp  simd_operations.h
scripts/: build.sh  build_windows.bat  create_windows_installer.bat  download_assets.sh  test.sh
src/: creature_engine.rs  ffi.rs  game_modes.rs  lib.rs  main.rs  save.rs  ui.rs
src/assets/: cache.rs  compression.rs  loader.rs  mod.rs
src/audio/: manager.rs  mod.rs  music.rs  sound.rs
src/battle/: ai.rs  animation.rs  damage.rs  damage_calculator.rs  effects.rs  engine.rs  mod.rs  status_effects.rs  turn.rs  turn_manager.rs
src/core/: app.rs  config.rs  engine.rs  error.rs  event_system.rs  math.rs  mod.rs  resource_manager.rs  time.rs
src/creature_engine/: balance_system.rs  evolution_tree.rs  generator.rs  mod.rs  mutation.rs  rarity_system.rs  templates.rs  trait_system.rs  validator.rs
src/data/: cache.rs  database.rs  loader.rs  mod.rs  serializer.rs
src/ecs/: component.rs  entity.rs  mod.rs  query.rs  system.rs  world.rs
src/engine/: audio.rs  input.rs  mod.rs  renderer.rs  resource.rs  scene.rs
src/graphics/: camera.rs  mod.rs  renderer.rs  renderer2d.rs  shader.rs  sprite.rs  texture.rs  ui.rs
src/input/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs  touch.rs
src/network/: client.rs  lobby.rs  matchmaking.rs  mod.rs  multiplayer.rs  p2p.rs  protocol.rs  server.rs  sync.rs
src/player/: inventory.rs  mod.rs  party.rs  pc.rs  profile.rs  progress.rs  progression.rs  trainer.rs
src/pokemon/: abilities.rs  ai.rs  evolution.rs  individual.rs  loader.rs  mod.rs  moves.rs  species.rs  stats.rs  types.rs
src/states/: battle.rs  loading.rs  menu.rs  mod.rs  overworld.rs  settings.rs
src/ui/: battle_ui.rs  dialog.rs  hud.rs  inventory_ui.rs  menu.rs  mod.rs  pokemon_ui.rs
src/utils/: debug.rs  logger.rs  mod.rs  pathfinding.rs  random.rs  text.rs
src/world/: collision.rs  environment.rs  events.rs  location.rs  map.rs  mod.rs  npc.rs  spawn.rs  tile.rs  weather.rs
