# 高性能宝可梦游戏 - Rust项目配置
# 开发心理：选择Bevy作为游戏引擎，注重性能和现代化架构
# 使用最新的Rust特性，SIMD优化，零成本抽象原则

[package]
name = "pokemongo"
version = "0.1.0"
edition = "2021"
authors = ["Pokemon Team <team@pokemon.dev>"]
description = "High-performance Pokemon game built with Rust and Bevy"
license = "MIT"
repository = "https://github.com/pokemon-team/pokemongo"
keywords = ["game", "pokemon", "bevy", "performance"]
categories = ["games"]

# Windows 特定配置
[target.'cfg(windows)']
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[lib]
name = "pokemongo"
path = "src/lib.rs"

[[bin]]
name = "pokemongo"
path = "src/main.rs"

[dependencies]
# 游戏引擎 - Bevy提供ECS架构和现代渲染管线
bevy = { version = "0.14", features = [
    "default",
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_audio",
    "bevy_asset",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis"
]}

# 序列化 - 高性能二进制序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 数学库 - SIMD优化的数学运算
glam = { version = "0.27", features = ["serde"] }
rand = "0.8"
fastrand = "2.0"

# 网络 - 异步高性能网络
tokio = { version = "1.0", features = ["full"], optional = true }
async-std = { version = "1.12", optional = true }

# 数据结构 - 高性能集合类型
hashbrown = "0.15"
indexmap = "2.0"
smallvec = "1.13"

# 工具库
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
rand_distr = "0.4"

# 音频处理
cpal = "0.15"
rodio = "0.18"

# 图像处理
image = "0.25"

# 文件系统和时间
tempfile = "3"

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"

# 压缩
flate2 = "1.0"

# FFI绑定
bindgen = "0.70"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.70"
pkg-config = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[profile.dev]
opt-level = 1
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["multiplayer", "audio", "creature-designer"]
multiplayer = ["dep:tokio", "dep:async-std"]
audio = []
creature-designer = []
simd = []
native = []
custom-engine = []
graphics-wip = []
battle-wip = []
pokemon-wip = []
network-wip = []

# [workspace]
# members = [
#     "tools/creature_designer",
#     "tools/mod_support",
# ]

# [[bench]]
# name = "creature_generation"
# harness = false